# unstickymem

./: .gitignore  .project  .travis.yml  CMakeLists.txt  Makefile  README.md  bandwidth_bench_with_perf.c  force_interleave.c  main.cpp  unstickymem.ini
.github/ISSUE_TEMPLATE/: bug_report.md
contrib/: check-stall-rate.sh  check-time.sh
include/better-enums/: enum.h
include/fpthread/: Logger.hpp
include/unstickymem/: HardwareEvents.hpp  Logger.hpp  MemoryMap.hpp  MemorySegment.hpp  PagePlacement.hpp  PerformanceCounters.hpp  Runtime.hpp  logger.hpp  mem-stats.h  unstickymem.h  wrap.hpp
include/unstickymem/memory/: MemoryMap.hpp  MemorySegment.hpp
include/unstickymem/mode/: AdaptiveMode.hpp  DisabledMode.hpp  FixedRatioMode.hpp  Mode.hpp  ScanMode.hpp  WeightedAdaptiveMode.hpp
pmc/pmcdriver/: .MSRdrv.ko.cmd  .MSRdrv.mod.o.cmd  .MSRdrv.o.cmd  MSRdrv.ko  MSRdrv.mod.c  modules.order
pmc/pmcdriver/.tmp_versions/: MSRdrv.mod
pmc/pmctest/: #PMCTestA.cpp#  #meuteste.c#  a.out  core  meuteste
src/fpthread/: Logger.cpp
src/unstickymem/: MemoryMap.cpp  MemorySegment.cpp  PagePlacement.cpp  PerformanceCounters.cpp  Runtime.cpp  mem-stats.cpp  unstickymem.c  unstickymem.cpp  wrap.cpp
src/unstickymem/memory/: MemoryMap.cpp  MemorySegment.cpp
src/unstickymem/mode/: AdaptiveMode.cpp  DisabledMode.cpp  FixedRatioMode.cpp  Mode.cpp  ScanMode.cpp  WeightedAdaptiveMode.cpp
test/: CMakeLists.txt  autobench.c  bandwidth_bench.c  bench-shared.c  bench.c  machine.h  main.cpp  make_bandwidth_bench.sh  test_allocations.c  test_hello_world.c  test_joao.c
